--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.11.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "axios": "^0.27.2",
     "framer-motion": "^6",
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
