build(playground): add build script

--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
     },
     "build": {
       "dependsOn": [],
-      "outputs": ["dist/**"]
+      "outputs": ["dist/**", "build/**"]
     },
     "prettier:fix": {
       "dependsOn": [],
