--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -27,6 +27,7 @@
   },
   "scripts": {
     "dev": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
