--- a/packages/@react-oauth/google/package.json
+++ b/packages/@react-oauth/google/package.json
@@ -13,9 +13,7 @@
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "prerelease": "npm run build",
-    "release": "np --no-tests --no-yarn",
-    "commit": "cz",
-    "prepare": "is-ci || husky install"
+    "release": "release-it"
   },
   "publishConfig": {
     "access": "public"
@@ -48,13 +46,13 @@
     "google-oAuth"
   ],
   "devDependencies": {
-    "@types/react": "^18.0.8",
-    "cross-env": "^7.0.3",
-    "np": "^7.6.1",
-    "typescript": "^4.6.4",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "@types/react": "^18.0.8",
+    "cross-env": "^7.0.3",
+    "release-it": "^15.0.0",
     "rollup": "^2.71.1",
+    "rollup-config-generator": "*",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-cleaner": "^1.0.0",
     "rollup-plugin-delete": "^2.0.0",
@@ -62,7 +60,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.31.2",
     "tsconfig": "*",
-    "rollup-config-generator": "*"
+    "typescript": "^4.6.4"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
