--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,7 @@
       "cache": false
     },
     "build": {
-      "dependsOn": [],
+      "dependsOn": ["^build"],
       "outputs": ["dist/**", "build/**"]
     }
   }
