chore: replace release-it with changesets

--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "build": "cross-env NODE_ENV=production turbo run build",
     "prettier:check": "prettier . --check --ignore-unknown --ignore-path .gitignore",
     "prettier:fix": "prettier . --write --ignore-unknown --ignore-path .gitignore",
-    "release:google": "cross-env NODE_ENV=production npm --prefix ./packages/@react-oauth/google run release",
+    "prerelease": "npm run build -- --filter=./packages/@react-oauth/*",
+    "release": "changeset publish",
     "commit": "cz",
     "prepare": "is-ci || husky install"
   },
   "devDependencies": {
-    "commitizen": "^4.2.4",
+    "@changesets/changelog-github": "^0.4.4",
+    "@changesets/cli": "^2.22.0",
     "@commitlint/cli": "^16.3.0",
     "@commitlint/config-conventional": "^16.2.4",
+    "commitizen": "^4.2.4",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.1",
