--- a/packages/@react-oauth/google/package.json
+++ b/packages/@react-oauth/google/package.json
@@ -6,14 +6,13 @@
   "module": "./dist/index.esm.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "./dist"
+    "dist"
   ],
   "license": "MIT",
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c",
-    "prerelease": "npm run build",
-    "release": "release-it"
+    "prerelease": "npm run build"
   },
   "publishConfig": {
     "access": "public"
@@ -50,7 +49,6 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/react": "^18.0.8",
     "cross-env": "^7.0.3",
-    "release-it": "^15.0.0",
     "rollup": "^2.71.1",
     "rollup-config-generator": "*",
     "rollup-plugin-babel": "^4.4.0",
