--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier:check": "prettier . --check --ignore-unknown --ignore-path .gitignore",
     "prettier:fix": "prettier . --write --ignore-unknown --ignore-path .gitignore",
     "prerelease": "npm run build -- --filter=./packages/@react-oauth/*",
+    "changeset": "changeset",
     "release": "changeset publish",
     "commit": "cz",
     "prepare": "is-ci || husky install"
