--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "changeset": "^0.2.6"
   }
 }
