--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "cross-env NODE_ENV=production turbo run build",
     "prettier:check": "prettier . --check --ignore-unknown --ignore-path .gitignore",
     "prettier:fix": "prettier . --write --ignore-unknown --ignore-path .gitignore",
-    "prerelease": "npm run build -- --filter=./packages/@react-oauth/*",
+    "prerelease": "npm run build -- --filter='@react-oauth/*'",
     "changeset": "changeset",
     "release": "changeset publish",
     "commit": "cz",
