--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,18 +9,15 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v2
 
-      - name: Use Node.js 20.x
-        uses: actions/setup-node@v4
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v2
         with:
-          node-version: 20.x
-
-      - name: Enable Corepack
-        run: corepack enable
+          node-version: 16.x
 
       - name: Install Dependencies
-        run: yarn install --immutable
+        run: yarn
 
       - name: Create Release Pull Request & Publish to npm
         uses: changesets/action@v1
